<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_meeting_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOnSecondary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/paddingHorizontalLayout"
...
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_name_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:ems="1"
                    android:hint="@string/name_meeting"
                    android:imeOptions="flagNoExtractUi"
...
                    android:paddingStart="@dimen/paddingStart"
                    android:textColor="#000000"
                    android:textSize="@dimen/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/idSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_marginBottom"
                android:layout_weight="10"
                android:background="#002196F3"
                android:paddingVertical="@dimen/paddingStartSpinner"
                android:spinnerMode="dropdown">
            </Spinner>

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_marginBottom"
                android:layout_weight="10"
                android:paddingVertical="6dp"
                android:background="@drawable/board_view"
...
                android:hint="@string/DDMMYYYY"
                android:paddingHorizontal="@dimen/paddingStart"
                android:textColor="#000000"
                android:textSize="@dimen/date_hour" />

            <TextView
                android:id="@+id/hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_marginBottom"
                android:paddingVertical="@dimen/paddingVertical"
                android:layout_weight="10"
                android:background="@drawable/board_view"
...
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/get_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:hint="@string/set_mail_participants"
                    android:imeOptions="actionSend"
                    android:inputType="textEmailAddress"
...
