<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menu_valide"
        app:showAsAction="always"
        android:title="@string/VALID"
        android:icon="@drawable/ic_done_black_24dp"
        >
    </item>
</menu>